--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Labrada&display=swap');
 
 body {
-  background-color: #fff;
+  background-color: #F8F9FA;
   padding:0px;
   font: 16.0px/1.5 Labrada, serif; 
   color:#595959;
@@ -27,7 +27,9 @@ body {
   line-height:2.5rem;
   margin-right:1rem}
 
-@media (prefers-color-scheme: dark) { .social-icons a {color: #3eb7f0 !important; }}
+/*
+  @media (prefers-color-scheme: dark) { .social-icons a {color: #3eb7f0 !important; }}
+*/
 
 .social-icons a:last-child{margin-right:0}.social-icons a:hover{background-color:white;
     color:black;
@@ -48,25 +50,25 @@ body {
       }
      */
 
-@media (prefers-color-scheme: dark) {.social-icons a:last-child{margin-right:0}.social-icons a:hover{background-color:#20212b;
-    color:black;
-    transform: scale(1.2)} 
-    /*
-    .social-icons a:after {
-        content: '';
-        display: block;
-        margin: 0px;
-        height: 1px;
-        width: 0px;
-        background: transparent;
-        transition: width .5s ease, background-color .5s ease;
-      }
-    .social-icons a:hover:after {
-        width: 100%;
-        background: #a0b0ff;
-      }
-    */
-}
+// @media (prefers-color-scheme: dark) {.social-icons a:last-child{margin-right:0}.social-icons a:hover{background-color:#20212b;
+//     color:black;
+//     transform: scale(1.2)} 
+//     /*
+//     .social-icons a:after {
+//         content: '';
+//         display: block;
+//         margin: 0px;
+//         height: 1px;
+//         width: 0px;
+//         background: transparent;
+//         transition: width .5s ease, background-color .5s ease;
+//       }
+//     .social-icons a:hover:after {
+//         width: 100%;
+//         background: #a0b0ff;
+//       }
+//     */
+// }
 
 .icon-button{
   background-color:white;
@@ -171,6 +173,7 @@ papertitle {
     font-size: 100%;
   }
 
+/*
 @media (prefers-color-scheme: dark) {
     body {
         background-color: #20212b;
@@ -194,6 +197,7 @@ papertitle {
     }
 
 }
+*/
 
 
   .image {
@@ -260,6 +264,7 @@ h2 {
   font-size: 157%;
 }
 
+/*
 @media (prefers-color-scheme: dark) {
   h1, h3, h4, h5, h6 {
     color:rgb(62, 183, 240);
@@ -269,6 +274,7 @@ h2 {
     color:rgb(62, 183, 240);
   }
 }
+*/
 
 p, ul, ol, table, pre, dl {
   margin:0 0 20px;
@@ -291,11 +297,13 @@ a:hover {
   color:#069;
 }
 
+/*
 @media (prefers-color-scheme: dark) {
   a {
     color:rgb(62, 183, 240);
   }
 }
+*/
 
 a small {
   font-size:11px;
@@ -354,6 +362,7 @@ th {
   color:#444;
 }
 
+/*
 @media (prefers-color-scheme: dark) {
   th {
     color:rgb(62, 183, 240);
@@ -363,6 +372,7 @@ th {
     color:rgb(62, 183, 240);
   }
 }
+*/
 
 img {
   max-width:100%;
@@ -427,11 +437,13 @@ strong {
   font-weight:500;
 }
 
+/*
 @media (prefers-color-scheme: dark) {
   strong {
     color:#eeeff0;
   }
 }
+*/
 
 header ul li + li + li {
   border-right:none;
