--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;0,500;0,600;1,500;1,600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Labrada&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Vollkorn&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Neuton&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alice&display=swap');
 
 body {
   background-color: #F8F9FA;
   padding:0px;
-  font: 16.0px/1.5 Labrada, serif; 
+  font: 16.0px/1.5 Vollkorn, serif; 
   color:#595959;
   font-weight:400;
   margin:0
